Se agregan los Creditos adicionales

--- a/00-Intro-GIT-HTML-CSS/03. HTML/homework/styles.css
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/homework/styles.css
@@ -1,5 +1,12 @@
+body {
+    /* background-color: #ffdd90; */
+    background-image: url("https://wallpaperaccess.com/full/3192310.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 h1 {
-    color: blue;
+    color: white;
 }
 
 img {
@@ -8,8 +15,8 @@ img {
 
 #thirdDiv {
     width: 500px;
-    height: 600px; 
-    background-color: tomato;   
+    height: 600px;
+    background-color: rgb(238, 110, 88);   
     padding: 50px;
     border: 2px dashed green;
 }
@@ -17,4 +24,11 @@ img {
 #spanId {
     font-size: 18px;
     margin: 50px;
+    color: rgba(174, 23, 204, 0.993);
 }
+
+a {
+    color: #e70f45;
+    font-size: 118%;   
+}
+
